<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <com.fernando.emailsmanager_gerenciadorde_emails.ui.customviews.EditTextError
        android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:error="true"
        app:iconSrc="@drawable/person_icon"
        app:errorText="@string/empty_name_error_text"
        app:labelText="@string/email_name_hint_text" />

    <com.fernando.emailsmanager_gerenciadorde_emails.ui.customviews.EditTextError
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_editText"
        android:inputType="textEmailAddress"
        app:error="true"
        app:iconSrc="@drawable/email_icon"
        app:errorText="@string/empty_email_error_text"
        app:labelText="@string/email_value_hint_text"
        android:layout_marginTop="24dp"/>

    <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btn_add_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/email_editText"
    android:layout_marginTop="36dp"
    android:paddingHorizontal="71dp"
    android:text="@string/btn_add_text"
    android:textAllCaps="false"
    android:background="@drawable/background_add_button"
    android:textColor="@color/white"
    android:textSize="12sp" />

    <com.fernando.emailsmanager_gerenciadorde_emails.ui.customviews.ErrorText
        android:id="@+id/add_email_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_email"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="40dp"
        android:textAlignment="center"
        android:text="@string/add_email_error_text"
        android:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>